fix Head in Layout issue

--- a/styles/layout.module.sass
+++ b/styles/layout.module.sass
@@ -3,15 +3,19 @@ $color-dark: #342e28
 $color-black: #312514
 
 .header
-  background-color: $color-dark
-  min-height: 8vh
+  position: fixed
+  top: 0
+  left: 0
   display: flex
+  min-height: 8vh
   flex-direction: column
   align-items: center
   justify-content: center
+  background-color: $color-dark
+  color: $color-white
   font-size: calc(10px + 2vmin)
   font-family: 'Kaisei Opti', serif
-  color: $color-white
+
 .container
   text-align: center
   background-color: $color-white
